2005-09-14  Derek Price  <derek@ximbiot.com>

	* edit.c (edit_usage, unedit_usage, editors_usage), watch.c
	(watch_usage, watchers_usage): Add quotes and reword for clarity and
	consistency.

	* edit.c (edit_usage): Add missing syntax.  Reword description for
	clarity.  Mention default behavior.

2005-09-13  Derek Price  <derek@ximbiot.com>

	* sanity.sh ($anyusername): Reduce charset to that allowed on Linux.

	* sanity.sh ($anyusername): Make more robust and expand comments.
	Reported by Mark D. Baushke <mdb@gnu.org>.

	* sanity.sh: Split $username into $username & $username8.  Rename
	$author as $anyusername.

2005-09-12  Derek Price  <derek@ximbiot.com>

	* sanity.sh (username): Cut $username down to 8 characters when longer,
	since that is all that appears in output.

2005-09-11  Derek Price  <derek@ximbiot.com>

	[bug #14504]
	* main.c (main): Set server_hostname before it is used by
	gserver_authenticate_connection.
	(Report from Serguei E. Leontiev <leo@sai.msu.ru>.)

2005-09-08  Larry Jones  <lawrence.jones@ugs.com>

	* server.c (parseServerOptions): getopt() returns int, not char.

2005-09-07  Derek Price  <derek@ximbiot.com>

	* rcs.c (RCS_parse): Minor reformatting.

	Close <http://savannah.nongnu.org/bugs/?func=detailitem&item_id=14462>.
	* rcs.c (RCS_parse): Free variable *after* using it for the last time.

2005-09-06  Derek Price  <derek@ximbiot.com>

	* sanity.sh (tempfile): All CVS temp files start with "cvs".

	* sanity.sh (tempfile): New var.
	(tempname): Set to $TMPDIR/$tempfile after $TMPDIR is set.
	(info): s#$TMPDIR/##.

	* rcs.c (RCS_putdtree): Remove unused variable.

2005-09-06  Mark D. Baushke  <mdb@gnu.org>

	Close <https://savannah.nongnu.org/bugs/?func=detailitem&item_id=14435>.
	* rcs.c (RCS_putdtree): Avoid stack overflow which may be
	possible with excessive recursive calls to RCS_putdtree().
	(Patch from Serg Masyutin.)

2005-09-06  Derek Price  <derek@ximbiot.com>
